--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.9.1",
-    "@grpc/proto-loader": "^0.7.9"
+    "@grpc/proto-loader": "^0.7.9",
+    "google-protobuf": "^3.21.2",
+    "grpc-go-node-example-api": "github:maxhorowitz/grpc-go-node-example-api"
   }
 }
